@@ -7,6 +7,10 @@ module Nokogiri
       undef_method :namespace_definitions
       undef_method :line
 
+      def self.new name, doc, *args
+        doc.create_entity(name, *args)
+      end
+
       def inspect
         "#<#{self.class.name}:#{sprintf("0x%x", object_id)} #{to_s.inspect}>"
       end
