@@ -18,6 +18,43 @@ module Nokogiri
         @entity_decl = @entities.first
       end
 
+      def test_constants # for libffi implementation. *sigh* sorry Mike. :-(
+        assert_equal 1, EntityDecl::INTERNAL_GENERAL
+        assert_equal 2, EntityDecl::EXTERNAL_GENERAL_PARSED
+        assert_equal 3, EntityDecl::EXTERNAL_GENERAL_UNPARSED
+        assert_equal 4, EntityDecl::INTERNAL_PARAMETER
+        assert_equal 5, EntityDecl::EXTERNAL_PARAMETER
+        assert_equal 6, EntityDecl::INTERNAL_PREDEFINED
+
+        # While I'm here, another problem with libffi comes to mind.  If someone
+        # upgrades their version of any particular C library, and the constants
+        # change values, the client using Ruby code is fucked.  That sucks.
+        # Basically anything to do with the preprocessor fucks someone using
+        # libffi.  :-(
+      end
+
+      def test_create_typed_entity
+        entity = @xml.create_entity(
+          'foo', EntityDecl::INTERNAL_GENERAL, nil, nil, nil
+        )
+        assert_equal EntityDecl::INTERNAL_GENERAL, entity.entity_type
+        assert_equal 'foo', entity.name
+      end
+
+      def test_new
+        entity = Nokogiri::XML::EntityDecl.new(
+          'foo', @xml, EntityDecl::INTERNAL_GENERAL, nil, nil, nil
+        )
+        assert_equal EntityDecl::INTERNAL_GENERAL, entity.entity_type
+        assert_equal 'foo', entity.name
+      end
+
+      def test_create_default_args
+        entity = @xml.create_entity('foo')
+        assert_equal EntityDecl::INTERNAL_GENERAL, entity.entity_type
+        assert_equal 'foo', entity.name
+      end
+
       def test_external_id
         assert_nil @entity_decl.external_id
       end
